feat(server): get product categories
