# server/src/core/application/use-cases/find-product-categories.ts
@@ -1,0 +1,14 @@
+import {
+  ProductCategory,
+  ProductCategoryRepository,
+} from '@pedido-express/domain';
+
+export class FindProductCategories {
+  constructor(
+    private readonly productCategoryRepository: ProductCategoryRepository,
+  ) {}
+
+  async findAll(): Promise<ProductCategory[]> {
+    return this.productCategoryRepository.findAll();
+  }
+}
