# server/src/core/presentation/controllers/find-many-product-categories-http-controller.ts
@@ -1,0 +1,11 @@
+import { ProductCategory } from '@pedido-express/domain';
+import { FindProductCategories } from '../../application/use-cases';
+import { HttpResponse } from './http-controller';
+
+export class FindManyProductCategoriesHttpController {
+  constructor(private readonly findProductCategories: FindProductCategories) {}
+  async handle(): Promise<HttpResponse<ProductCategory[]>> {
+    const productCategories = await this.findProductCategories.findAll();
+    return HttpResponse.ok(productCategories);
+  }
+}
