# server/src/main/factories/product-category-factories.ts
@@ -1,0 +1,16 @@
+import { Repository } from '@pedido-express/domain';
+import { FindProductCategories } from '../../core/application';
+import {
+  CatchErrorHttpControllerDecorator,
+  FindManyProductCategoriesHttpController,
+} from '../../core/presentation';
+
+export const makeFindManyProductCategoriesHttpController = (
+  repository: Repository,
+) => {
+  return new CatchErrorHttpControllerDecorator(
+    new FindManyProductCategoriesHttpController(
+      new FindProductCategories(repository.productCategory),
+    ),
+  );
+};
