# server/src/main/routes/product-category-routes.ts
@@ -1,0 +1,14 @@
+import { Router } from 'express';
+import { Repository } from '@pedido-express/domain';
+import { adaptRoute } from './route';
+import { makeFindManyProductCategoriesHttpController } from '../factories/product-category-factories';
+
+export const productCategoryRoutes = (
+  router: Router,
+  repository: Repository,
+) => {
+  router.get(
+    '/product-categories',
+    adaptRoute(makeFindManyProductCategoriesHttpController(repository)),
+  );
+};
